# agentregistry-inventory

./: .env.example  .gitignore  .ko.yaml  .mcp.json  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONCEPT.md  CONTRIBUTING.md  DEVELOPMENT.md  MCP_AND_A2A_INTEGRATION.md  Makefile  PASSPORT.md  README.md  coverage.xml  demo-kubeconfig.yaml  go.mod  go.sum  main.go  mock-api.go  report.xml  setup.sh  test_mcp.py
.github/workflows/: build.yml  helm-release.yml  push.yml  registry-submission.yml  release.yml
api/v1alpha1/: agentcatalog_types.go  common_types.go  discoveryconfig_types.go  groupversion_info.go  masteragentconfig_types.go  mcpservercatalog_types.go  modelcatalog_types.go  (+3 more)
cmd/: configure.go  connect.go  disconnect.go  install.go  list.go  refresh.go  root.go  show.go  start.go  ui.go  version.go
config/: namespace.yaml
docker/: controller.Dockerfile  server.Dockerfile
docs/: AUTODISCOVERY.md  IMPLEMENTATION_REVIEW.md  MCP_SERVER.md  SUBMISSION_WORKFLOW.md  azure-ad-setup.md  governance-controller.md  mcp-auth.md  oidc-setup.md  sample-skill.json  skills-developer-flow.md  skills-ux-assessment.md  test-plan-e2e.md
evals/: README.md  conftest.py  pyproject.toml  test_a2a_eval.py  test_http_events.py
evals/eval_datasets/: multi_event.test.json  triage_basic.test.json
evals/master_agent/: agent.py
scripts/: create-demo-resources.js
test/: run_tests.sh
tests/: Makefile-ref  application.yaml  envs.yaml  envtestHelper.go.sample  kubeauth.go.sample
ui/: .env.example  .gitignore  auth.ts  next.config.js  package-lock.json  package.json  proxy.ts
(+298 files in other folders)
